[tool.poetry]
name = "hoom"
version = "0.1.3"
description = "Build your own HomeKit Bridge & Accessories with Hoom"
authors = ["Paul Haedrich <hey@foerstal.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/berrysauce/hoom"
repository = "https://github.com/berrysauce/hoom"
documentation = "https://github.com/berrysauce/hoom"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Home Automation",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
hap-python = "^4.7.0"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
pyqrcode = "^1.2.1"
base36 = "^0.1.1"
colorama = "^0.4.6"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
